# nuclear-waste

./: README.md
task2/: expected_output  results.txt
task2/hello/src/: hello.c
task3/: results.txt
task4/: CMakeLists.txt  results.txt
task4/einit/: CMakeLists.txt
task4/einit/src/: init.yaml.in  security.psl
task4/resources/: Ping.cdl  Ping.idl
task4/resources/edl/: Showapp.edl
task4/showapp/: CMakeLists.txt
task4/showapp/src/: showapp.c
task4/subscriber/: CMakeLists.txt
task4/subscriber/src/: main.cpp  subscriber.cpp  subscriber.h
